Fixed #20 - Horizontal scrollbar appears on mobile

--- a/src/assets/css/app/_home.scss
+++ b/src/assets/css/app/_home.scss
@@ -82,8 +82,11 @@
     }
 }
 
-
 @media screen and (max-width: 960px) {
+    .layout-wrapper { 
+        overflow-x: hidden;
+    }
+
     .video-container {
         position: relative;
         width: 100%;
